# gnc-sim

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  pyproject.toml  vercel.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  golden.yml  self-hosted.yml
apps/bench/: CMakeLists.txt  bench_main.cpp
apps/cli/: CMakeLists.txt  gncsim_main.cpp
apps/wasm/: CMakeLists.txt  gncsim_wasm.cpp
bindings/: CMakeLists.txt  README.md  conftest.py  gncsim_bindings.cpp  pyproject.toml  test_sdk.py
bindings/gncsim/: __init__.py
configs/: ballistic_flat.json  ballistic_round.json  ballistic_round_hifi.json  bmc2_datalink.json  bmc2_network.json  discrimination.json  engagement_cued.json  engagement_pkill.json  exo_divert_zemzev.json  homing_3dof.json  homing_6dof_hifi.json  homing_boost.json  homing_zemzev.json  many_on_many_raid.json  many_on_many_salvo.json  many_on_many_sls.json  montecarlo.json  montecarlo_apn.json  montecarlo_heavy.json  perf_budget.json  projectile_3dof.json  sensor_params.json  threat_hgv.json  threat_icbm.json  threat_rv_penaids.json  tiers.json  track_fused.json  track_ir_only.json  track_jpda.json  track_phenomenology.json  track_radar_only.json
core/: CMakeLists.txt
core/include/gncsim/aero/: Aero.hpp
core/include/gncsim/core/: Config.hpp  Rng.hpp  Serialize.hpp  Types.hpp
core/include/gncsim/dynamics/: Dynamics.hpp  Dynamics6dofHiFi.hpp  Linearize.hpp
core/include/gncsim/env/: EnvFidelity.hpp  Environment.hpp  Frames.hpp
core/include/gncsim/gnc/: DataAssociation.hpp  Discriminator.hpp  Ekf.hpp  Gnc.hpp  Imm.hpp  TargetTrackEkf.hpp
core/include/gncsim/interop/: ByteIo.hpp  Dis.hpp  DisAdapter.hpp  Federation.hpp  MessageBus.hpp  Recording.hpp  Transport.hpp  UdpTransport.hpp
core/include/gncsim/math/: Integrators.hpp  Quaternion.hpp  Vector3.hpp
core/include/gncsim/model/: Interfaces.hpp  Registry.hpp  Threats.hpp
core/include/gncsim/scenario/: ManyOnMany.hpp  Runner.hpp
core/include/gncsim/sensors/: Phenomenology.hpp  Sensors.hpp
core/src/aero/: Aero.cpp
core/src/core/: Config.cpp  Serialize.cpp
core/src/dynamics/: Dynamics.cpp  Dynamics6dofHiFi.cpp  Linearize.cpp
core/src/env/: EnvFidelity.cpp  Environment.cpp  Frames.cpp
core/src/gnc/: DataAssociation.cpp  Discriminator.cpp  Ekf.cpp  Gnc.cpp  Imm.cpp  TargetTrackEkf.cpp
core/src/interop/: Dis.cpp  DisAdapter.cpp  Federation.cpp  Recording.cpp  UdpTransport.cpp
core/src/model/: Registry.cpp  Threats.cpp
core/src/scenario/: ManyOnMany.cpp  MonteCarlo.cpp  Runner.cpp
core/src/sensors/: Phenomenology.cpp  Sensors.cpp
docs/: ANSWERS.md  ARCHITECTURE.md  DATA_CONTRACT.md  DEPLOY.md  DISTRIBUTED.md  Doxyfile  FMI.md  GOLDEN_RUNS.md  MODELS.md  ROADMAP.md  SELF_HOSTED_RUNNER.md  THEORY.md  VNV_MATRIX.md  VNV_REPORT.md
fmi/: CMakeLists.txt
fmi/include/fmi2/: fmi2FunctionTypes.h  fmi2Functions.h  fmi2TypesPlatform.h
fmi/master/: FmiMaster.cpp
fmi/scripts/: package_fmu.sh
fmi/src/: GenerateModelDescription.cpp  GncsimFmu.cpp  GncsimFmuVars.hpp
fuzz/: CMakeLists.txt  config_fuzz_target.hpp  config_fuzzer.cpp
fuzz/corpus/: hifi_trackers.json  malformed_types.json
matlab/: README.md  allan_deviation.m  getcol.m  load_run.m  validation_plot.m
postproc/: README.md  make_figures.py  pytest.ini  requirements.txt
postproc/gncpost/: __init__.py  atmosphere.py  credibility.py  discrimination.py  fusion.py  golden.py  loaders.py  loop_closure.py  montecarlo.py  phenomenology.py  pkill.py  plots.py  rundb.py  uq.py  uq_campaign.py  validate.py  vnv.py  vnv_report.py
postproc/golden/: golden.json
postproc/notebooks/: 01_single_run.ipynb  02_validation.ipynb  03_montecarlo_miss_distance.ipynb  _build_notebooks.py
postproc/tests/: conftest.py  test_allan.py  test_atmosphere.py  test_credibility.py  test_golden.py  test_loaders.py  test_montecarlo.py  test_phenomenology.py  test_rundb.py  test_tiers.py  test_uq.py  test_validation.py  test_vnv_matrix.py
runner/: Dockerfile  docker-compose.yml  entrypoint.sh
runs/sample_run/: discrim.csv  gnc.csv  manifest.json  sensors.csv  target.csv  track.csv  vehicle.csv
scripts/: build-native.sh  build-python.sh  build-wasm.sh  determinism-guard.mjs  parity-check.mjs  setup-self-hosted-runner.sh
sensors/: README.md  allan_variance.py  characterize.py  fit_noise_params.py  generate_imu_data.py  noise_model.py
tests/: CMakeLists.txt  aero_test.cpp  apn_test.cpp  bmc2_test.cpp  boost_test.cpp  config_fuzz_stress_test.cpp  core_test.cpp  cueing_test.cpp  data_association_test.cpp  discrimination_test.cpp  distributed_test.cpp  dynamics_test.cpp  ekf_test.cpp  env_fidelity_test.cpp  env_test.cpp  frames_test.cpp  gnc_test.cpp  imm_test.cpp  linearize_test.cpp  many_on_many_test.cpp  optimal_guidance_test.cpp  parallel_mc_test.cpp  phenomenology_test.cpp  property_test.cpp  registry_test.cpp  runner_test.cpp  sensors_test.cpp  sixdof_test.cpp  target_track_test.cpp  threat_suite_test.cpp
web/: .gitignore  README.md  next.config.js  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/validation/: page.tsx
web/components/: CesiumGlobe.tsx  ComparePanel.tsx  EnvironmentPanel.tsx  GroundTrack.tsx  GuidancePanel.tsx  MonteCarloPanel.tsx  NavigationPanel.tsx  ParamForm.tsx  Plot.tsx  ScenarioAuthor.tsx  SensorsPanel.tsx  StatePlots.tsx  Tabs.tsx  TelemetryExplorer.tsx  TrajectoryPlot.tsx  ValidationFigures.tsx
web/components/studio/: StudioShell.tsx  StudiosArea.tsx
web/lib/: enuToGeodetic.ts  presets.ts  prng.ts  scenarioAuthor.ts  signals.ts  stats.ts  types.ts  wasmRunner.ts
web/lib/studio/: registry.ts  types.ts
web/lib/studio/studios/: campaignMath.ts  campaignStudio.ts  controlsMath.ts  (+18 more)
web/public/: sample_result.json
web/public/scenarios/: ballistic_round.json  engagement_cued.json  homing_3dof.json  homing_3dof_ekf.json  homing_6dof.json  homing_boost.json  index.json
web/public/wasm/: gncsim.js  gncsim.wasm
web/scripts/: copy-cesium-assets.mjs  sync-scenarios.mjs
web/types/: plotly-dist.d.ts
